--- a/fem_challenges/four-card-feature-section-master/css/style.scss
+++ b/fem_challenges/four-card-feature-section-master/css/style.scss
@@ -91,10 +91,10 @@ html {
     img {
         position: absolute;
         width: 58px; height: 58px;
-        right: 1.75rem;
-        bottom: 1.6875rem;
-        // right: 9%;
-        // bottom: 12%;
+        //right: 1.75rem;
+        //bottom: 1.6875rem;
+        right: 9%;
+        bottom: 12%;
     }
 }
 
@@ -117,3 +117,6 @@ html {
 .card-2 .card-ribbon { background-color: $red; }
 .card-3 .card-ribbon { background-color: $orange; }
 .card-4 .card-ribbon { background-color: $blue; }
+
+
+@import 'desktop';
