--- a/fem_challenges/single-price-grid-component-master/css/style.scss
+++ b/fem_challenges/single-price-grid-component-master/css/style.scss
@@ -1,6 +1,6 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
 @import 'config';
 
 
@@ -11,6 +11,11 @@
 }
 
 
+html {
+    background-color: $light-gray;
+}
+
+
 .chrome-tools-layer {
     width: 100%;
     height: 500vh;
@@ -18,79 +23,159 @@
     background-color: #272727;
 }
 
+/*.content-container {
+    width: 100%;
+    height: 500vh;
+}*/
+
 
 .page-container {
     position: relative;
 
-    width: 375px;
-    height: 870px;
+    //width: 375px;
+    //height: 870px;
     margin: auto;
+    //margin: 0 auto 0.5rem auto;
+    padding: 4.5rem 2rem;
 
-    background-color: white;
-}
-
-
-.content-container {
-    
-    width: 100%;
-    height: 722px;
-    padding: 4rem 2rem;
-    margin: auto;
-
-    background-color: white;
+    background-color: $light-gray;
 }
 
 
 
-/* ************************************************** */
-/* ************ < invitation container > ************ */
+/* **************************************** */
+/* ************ < invitation > ************ */
 
 .invitation-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    padding: 1.5rem;
+    padding-bottom: 2rem;
+    //padding-bottom: 30px;
 
-    width: 311px;   // ** Responsify
-    height: 267px;  // ** Responsify
-
-    padding: 0.5rem 1.5rem 1rem 1.5rem;
-
-    // background-color: grey;
+    background-color: white;
 }
 
 .invitation-title {
-    font-size: 1.25rem;
-    font-weight: 700;
-    letter-spacing: -0.02rem;
+    color: $cyan;
+    font-size: 1.2rem;
+    letter-spacing: 0.01875rem;
 }
 
 .invitation-tagline {
-    font-size: 0.9rem;
+    margin-top: 1.5rem;
+
+    color: $bright-yellow;
     font-weight: 700;
-    letter-spacing: 0.01rem;
+    font-size: 0.9375rem;
+    line-height: 1.25;
+    letter-spacing: -0.014rem;
 }
 
 .invitation-description {
-    font-size: 0.85rem;
-    line-height: 1.9;
-    letter-spacing: 0.002rem;
+    margin-top: 1.2rem;
+
+    color: $grayish-blue;
+    font-weight: 700;
+    font-size: 0.875rem;
+    line-height: 1.625rem;
+    letter-spacing: -0.02795rem;
 }
 
-/* *********** < invitation container / > *********** */
-/* ************************************************** */
+/* *********** < invitation / > *********** */
+/* **************************************** */
 
 
 
-/* ************************************************** */
-/* ************* < sign-up container > ************** */
+/* **************************************** */
+/* ************* < sign-up > ************** */
 
 .sign-up-container {
-    width: 311px;
-    height: 228px;
+    padding: 1.25rem 1.5rem;
 
-    //background-color: grey;
+    background-color: $cyan;
+    color: white;
+    button {
+        color: white;
+        background-color: $bright-yellow;
+        border: 0;
+    }
+}
+
+.sign-up-title {
+    font-weight: 700;
+    font-size: 1.125rem;
+    letter-spacing: -0.016875rem;
+}
+
+.price-container {
+    display: flex;
+    align-items: center;
+    
+    margin-top: 0.5rem;
+}
+
+.price-amount {
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+.price-duration {
+    margin-left: 0.75rem;
+    font-size: 1rem;
+}
+
+.sign-up-tagline {
+    font-weight: 700;
+    letter-spacing: -0.0325rem;
+}
+
+.btn-sign-up {
+    width: 100%;
+    height: 3rem;
+    margin-top: 1.75rem;
+    border-radius: 5px;
+
+    font-family: 'Karla', sans-serif;
+    font-weight: 700;
+    font-size: 1rem;
 }
 
 
-/* ************ < sign-up container / > ************* */
-/* ************************************************** */
+/* ************ < sign-up / > ************* */
+/* **************************************** */
+
+
+
+
+/* **************************************** */
+/* ************** < why us > ************** */
+
+.why-us-container {
+    padding: 1.5rem;
+    
+    color: white;
+    background-color: desaturate(
+                            lighten($cyan, 5%),
+                            5%,
+                      );
+}
+
+.why-us-title {
+    font-weight: 700;
+    font-size: 1.125rem;
+    //letter-spacing: -0.016875rem;
+}
+
+.why-us-reasons {
+    margin-top: 1rem;
+
+    color: $light-gray;
+    font-weight: 700;
+    font-size: 0.875rem;
+    letter-spacing: -0.030625rem;
+    line-height: 1.25rem;
+}
+
+/* ************* < why us /> ************** */
+/* **************************************** */
+
+@import 'desktop';
