image path fixed

--- a/fem_challenges/fylo-data-storage-component-master/css/_desktop.scss
+++ b/fem_challenges/fylo-data-storage-component-master/css/_desktop.scss
@@ -10,7 +10,7 @@
         height: 100vh;
         padding: 18%;
 
-        background: url("/images/bg-desktop.png");
+        background: url("../images/bg-desktop.png");
         background-repeat: no-repeat;
         background-position: right 0 bottom 0;
     }
