--- a/fem_challenges/fylo-data-storage-component-master/css/style.scss
+++ b/fem_challenges/fylo-data-storage-component-master/css/style.scss
@@ -39,7 +39,7 @@ html {
 
 .page-content {
     padding: 8rem 1.5rem 10.5rem;
-    background: url("/images/bg-mobile.png");
+    background: url("../images/bg-mobile.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left 0 bottom 0;
